create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2028,7 +2028,7 @@ section.lazy-placeholder:after {
 .cid-rRYVm4VNHR {
   padding-top: 120px;
   padding-bottom: 0px;
-  background-image: url("../../../assets/images/background41.jpg");
+  background-image: url("../../../assets/images/background40.jpg");
 }
 .cid-rRYVtzxdPM {
   padding-top: 30px;
@@ -2457,7 +2457,7 @@ section.lazy-placeholder:after {
 .cid-rRZ4DK4EAx {
   padding-top: 120px;
   padding-bottom: 0px;
-  background-image: url("../../../assets/images/background41.jpg");
+  background-image: url("../../../assets/images/background40.jpg");
 }
 .cid-rRZ4Ld6Kyv {
   padding-top: 30px;
@@ -2886,7 +2886,7 @@ section.lazy-placeholder:after {
 .cid-rRZ4QWbN1g {
   padding-top: 120px;
   padding-bottom: 0px;
-  background-image: url("../../../assets/images/background41.jpg");
+  background-image: url("../../../assets/images/background40.jpg");
 }
 .cid-rRZ4VTq4h5 {
   padding-top: 30px;
@@ -2911,7 +2911,7 @@ section.lazy-placeholder:after {
 .cid-rSn2IyExUk {
   padding-top: 120px;
   padding-bottom: 0px;
-  background-image: url("../../../assets/images/background41.jpg");
+  background-image: url("../../../assets/images/background40.jpg");
 }
 .cid-rSn2IyExUk H2 {
   text-align: center;
@@ -3405,6 +3405,9 @@ section.lazy-placeholder:after {
     padding-top: 1.5rem !important;
   }
 }
+.cid-rSn3RK4EKU .mbr-author-desc {
+  text-align: center;
+}
 .cid-rSn4fewAtu {
   padding-top: 15px;
   padding-bottom: 15px;
@@ -3461,6 +3464,9 @@ section.lazy-placeholder:after {
   .cid-rSn4fJByWs .media-content {
     padding-top: 1.5rem !important;
   }
+}
+.cid-rSn4fJByWs .mbr-author-desc {
+  text-align: center;
 }
 .cid-rRZ3MBI9rP {
   padding-top: 15px;
@@ -3880,7 +3886,7 @@ section.lazy-placeholder:after {
 .cid-rSn5Uw8F8X {
   padding-top: 120px;
   padding-bottom: 0px;
-  background-image: url("../../../assets/images/background41.jpg");
+  background-image: url("../../../assets/images/background40.jpg");
 }
 .cid-rSn5Uw8F8X H2 {
   text-align: center;
